--- a/pgweb/kustomization.yaml
+++ b/pgweb/kustomization.yaml
@@ -1,4 +1,13 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+namespace: pgweb
+
 resources:
-- namespace.yaml
+- ../base/pgweb
+
+patches:
+- target:
+    kind: pgadmin
+    name: pg
+patch: |-
+  - op: replace
+    path: /pgweb
+    value: pg
