--- a/postgresql/kustomization.yaml
+++ b/postgresql/kustomization.yaml
@@ -1,4 +1,13 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+namespace: postgresql
+
 resources:
-- namespace.yaml
+- ../base/postgresql
+
+patches:
+- target:
+    kind: postgresql
+    name: post
+patch: |-
+  - op: replace
+    path: /postsql
+    value: postsql
